--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconify/react": "^5.1.0",
     "gsap": "^3.12.5",
     "next": "15.1.2",
     "react": "^19.0.0",
